--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       uses: actions/upload-artifact@v2.1.4
       with:
         # Artifact name
-        name: executable files
+        name: Executable
         # A file, directory or wildcard pattern that describes what to upload
         path: |
           Pmachine.js
